// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MessageComposerUrlPreviewViewModel > should preview a URL with media 1`] = `
{
  "content": "https://example.org",
  "entries": [
    {
      "include": true,
      "matched_url": "https://example.org",
      "preview": {
        "author": undefined,
        "description": undefined,
        "image": {
          "alt": undefined,
          "fileSize": 10000,
          "height": 128,
          "imageFull": "https://example.org/image/src",
          "imageThumb": "https://example.org/image/thumb",
          "imageType": undefined,
          "mxcImageFull": "mxc://example.org/abc",
          "playable": false,
          "width": 128,
        },
        "link": "https://example.org",
        "ogUrl": "https://example.org",
        "showTooltipOnLink": false,
        "siteIcon": undefined,
        "siteName": "example.org",
        "title": "Media example",
      },
      "status": "loaded",
    },
  ],
}
`;

exports[`MessageComposerUrlPreviewViewModel > should preview a valid URL in text 1`] = `
{
  "content": "Check out https://example.org today",
  "entries": [
    {
      "include": true,
      "matched_url": "https://example.org",
      "preview": {
        "author": undefined,
        "description": "This is a description",
        "image": undefined,
        "link": "https://example.org",
        "ogUrl": "https://example.org",
        "showTooltipOnLink": false,
        "siteIcon": undefined,
        "siteName": "Example.org",
        "title": "This is an example!",
      },
      "status": "loaded",
    },
  ],
}
`;
